--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "5.1.*"
+        "laravel/framework": ">=5.1.*"
     },
     "autoload": {
         "psr-4": {
